# ibase

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: PLAN.md
src/ibase/: __init__.py  cli.py  config.py  main.py  models.py  routes.py  store.py
src/ibase/ingest/: __init__.py  digest.py  extract.py  fetcher.py  ocr.py
src/ibase/llm/: __init__.py  engine.py
src/ibase/query/: __init__.py  filters.py  pipeline.py  ranker.py  semantic.py
tests/: test_ingest.py  test_llm.py  test_query.py  test_store.py
web/: app.js  index.html  styles.css
